--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,39 @@
+/* CUSTOM PROPS  */
+:root {
+  --tex-color:#333;
+
+}
+
+/* FONTS  */
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Bold.woff2") format("woff2"),
+    url("../fonts/Roboto-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Medium.woff2") format("woff2"),
+    url("../fonts/Roboto-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2"),
+    url("../fonts/Roboto-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
 /* GLOBAL */
 html {
   height: 100%;
@@ -18,14 +54,14 @@ body {
   padding: 0;
   margin: 0;
   font-size: 16px;
-  line-height: 1.5;
-  font-family:"Arial" sans-serif;
+  line-height: 1.75;
+  font-family: "Roboto,", "Arial" sans-serif;
   background-color: #fff;
-  color: #222;
+  color: var(--tex-color);
 }
 
 img {
-  min-width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -33,7 +69,7 @@ img {
 /* CONTAINER  */
 .container {
   width: 100%;
-  min-width: 1200px;
+  max-width: 1200px;
   padding-left: 50px;
   padding-right: 50px;
   margin-left: auto;
