--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body {
   margin: 0;
   font-size: 16px;
   line-height: 1.75;
-  font-family: "Roboto,", "Arial" sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   background-color: #fff;
   color: var(--tex-color);
 }
