--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@
   --tex-color:#333;
   --green: #0a775f;
   --outline-color:var(--green);
+  --black:#000;
+  --acsent-color-brawn: #C99B67;
+  --bg-color-brawn:#f3d787;
 }
 
 /* FONTS  */
@@ -72,6 +75,36 @@ img {
 }
 
 
+.button {
+  display: inline-block;
+  padding: 16px 24px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: normal;
+  letter-spacing: 1px;
+  cursor: pointer;
+  border-radius:100px;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.green-button {
+  background-color:var(--green);
+  color:#fff;
+  transition: opacity 0.3s ease;
+}
+
+.green-button:hover {
+  opacity: 0.8;
+}
+
+.green-button:active {
+  opacity: 0.6;
+}
+
+
 /* CONTAINER  */
 .container {
   width: 100%;
@@ -84,6 +117,7 @@ img {
 
 
 
+
 /* MAIN CONTENT  */
 .main-content {
   flex-grow: 1;
@@ -93,6 +127,7 @@ img {
 /* SITE HEADER HERO WRAPPER   */
 .site-header-hero-wrapper {
   background-image: url(../img/header-bg.jpg);
+  background-color: var(--bg-color-brawn);
 }
 
 
@@ -101,6 +136,7 @@ img {
 .site-header {
   padding-top: 40px;
   padding-bottom: 40px;
+  margin-bottom: 5px;
 }
 
 .header-container {
@@ -156,6 +192,54 @@ img {
 .sitenav-links:active {
   opacity: 0.6;
 }
+
+
+/* HERO  */
+
+.hero-container {
+  display: flex;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.hero-info-wrapper {
+  width: 100%;
+  max-width: 730px;
+  padding-top: 116px;
+  padding-bottom: 100px;
+  padding-left: 150px;
+  padding-right: 116px;
+}
+
+.hero-heading {
+  font-weight: 700;
+  font-size: 64px;
+  line-height:normal;
+  margin-top: 0;
+  margin-bottom: 24px;
+  color:var(--black);
+}
+
+.hero-text {
+  font-weight: 400;
+  font-size: 16px;
+  margin-top: 0;
+}
+
+.hero-text:not(:last-child) {
+  margin-bottom: 34px;
+}
+
+.hero-img {
+  width: 710px;
+  height: 596px;
+  object-fit: cover;
+}
+
+.hero-img-index {
+  height: 696px;
+}
+
 
 
 /* RETINA BG  */
