--- a/css/main.css
+++ b/css/main.css
@@ -116,11 +116,11 @@ img {
 }
 
 
-
-
 /* MAIN CONTENT  */
 .main-content {
   flex-grow: 1;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 
@@ -132,7 +132,6 @@ img {
 
 
 /* HEADER  */
-
 .site-header {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -195,7 +194,6 @@ img {
 
 
 /* HERO  */
-
 .hero-container {
   display: flex;
   padding-left: 0;
@@ -241,6 +239,72 @@ img {
 }
 
 
+/* INDEX COLLECTION  */
+.main-content-inner {
+  padding: 50px 143px;
+  background-image: url(../img/index-collection-bg.jpg);
+}
+
+.main-heading {
+  text-align: center;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 59px;
+  margin-top: 0;
+  margin-bottom: 80px;
+  color:var(--black);
+  text-transform: uppercase;
+}
+
+.index-collection-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.index-collection-item {
+  display: flex;
+  align-items: center;
+}
+
+.index-collection-item:nth-child(even) {
+  flex-direction:row-reverse;
+}
+
+.index-collection {
+  flex-grow: 1;
+  padding-left: 117px;
+  padding-right: 117px;
+}
+
+.index-collection-img {
+  width: 450px;
+  height: 375px;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.index-collection-heading {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 56px;
+  color:var(--black);
+  margin-top: 0;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.index-collextion-text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 34px;
+  margin: 0;
+}
+
+.index-collextion-text:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 
 /* RETINA BG  */
 @media
@@ -252,5 +316,9 @@ only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
   .site-header-hero-wrapper {
     background-image: url(../img/header-bg@2x.jpg);
+  }
+
+  .main-content-inner {
+    background-image: url(../img/index-collection-bg@2x.jpg);
   }
 }
