--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,7 @@ img {
 /* HERO  */
 .hero-container {
   display: flex;
+  justify-content: space-between;
   padding-left: 0;
   padding-right: 0;
 }
@@ -232,6 +233,7 @@ img {
   width: 710px;
   height: 596px;
   object-fit: cover;
+  flex-shrink: 0;
 }
 
 .hero-img-index {
