--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,6 @@ img {
 /* HERO  */
 .hero-container {
   display: flex;
-  justify-content: space-between;
   padding-left: 0;
   padding-right: 0;
 }
@@ -245,6 +244,7 @@ img {
 .main-content-inner {
   padding: 50px 143px;
   background-image: url(../img/index-collection-bg.jpg);
+  margin-bottom: 20px;
 }
 
 .main-heading {
@@ -308,6 +308,83 @@ img {
 }
 
 
+/* INDEX FEATURES  */
+.index-features {
+  margin-bottom: 30px;
+}
+
+.index-features-inner {
+  padding: 50px 30px;
+  padding-bottom: 50px;
+  background-image: url(../img/index-features-bg.jpg);
+  background-size: 100% 700px;
+  background-repeat: no-repeat;
+}
+
+.index-features-heading {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 59px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.index-features-lead {
+  max-width: 581px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 80px;
+  color: #fff;
+}
+
+.index-features-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-left:-20px;
+  list-style: none;
+}
+
+.index-features-item {
+  width: 433px;
+  margin-left: 20px;
+}
+
+.index-features-img {
+  width: 433px;
+  height: 500px;
+  margin-bottom: 28px;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.index-features-bottom-heading {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+  color: var(--black);
+  text-transform: uppercase;
+}
+
+.index-features-text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+
 /* RETINA BG  */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -322,5 +399,9 @@ only screen and (                min-resolution: 2dppx) {
 
   .main-content-inner {
     background-image: url(../img/index-collection-bg@2x.jpg);
+  }
+
+  .index-features-inner {
+    background-image: url(../img/index-features-bg@2x.jpg);
   }
 }
