--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ body {
   font-family: "Roboto", "Arial", sans-serif;
   background-color: #fff;
   color: var(--tex-color);
+  overflow-x: hidden;
 }
 
 img {
@@ -236,10 +237,21 @@ img {
 }
 
 .hero-img {
+  display: block;
   width: 710px;
   height: 596px;
   object-fit: cover;
   flex-shrink: 0;
+}
+
+.hero-bage-img {
+  position: relative;
+}
+
+.hero-bage {
+  position: absolute;
+  top: -70px;
+  left: -80px;
 }
 
 .hero-img-index {
@@ -249,6 +261,7 @@ img {
 
 /* INDEX COLLECTION  */
 .main-content-inner {
+  position: relative;
   padding: 50px 143px;
   background-image: url(../img/index-collection-bg.jpg);
   margin-bottom: 20px;
@@ -312,6 +325,24 @@ img {
 
 .index-collextion-text:not(:last-child) {
   margin-bottom: 10px;
+}
+
+.index-collection-leaves-left {
+  position: absolute;
+  top: 0;
+  left: -200px;
+}
+
+.index-collection-leaves-right {
+  position: absolute;
+  top: 658px;
+  right: -327px;
+}
+
+.index-collection-leaves-left-light {
+  position: absolute;
+  bottom: 170px;
+  left: -216px;
 }
 
 
@@ -394,6 +425,7 @@ img {
 
 /* HOW IT WORKS  */
 .how-it-works-wrapper {
+  position: relative;
   padding: 50px 30px;
   background-image: url(../img/how-it-works-bg.jpg);
   text-align: center;
@@ -421,6 +453,7 @@ img {
 }
 
 .how-it-works-item {
+  position: relative;
   width: calc(100% / 3 - 20);
   display: flex;
   flex-direction: column;
@@ -429,11 +462,24 @@ img {
 }
 
 .how-it-works-item::before {
+  position: relative;
+  z-index: 2;
   width: 60px;
   height: 60px;
   background-color: #f8f8f2;
   border:4px solid #c99b67;
   margin-bottom: 20px;
+  content:"";
+}
+
+.how-it-works-item:not(:last-child):after {
+  position: absolute;
+  left: 35px;
+  top: 30px;
+  height: 3px;
+  width: 433px;
+  background-image: url("../img/brown-stroke.svg");
+  background-repeat: no-repeat;
   content:"";
 }
 
@@ -488,6 +534,12 @@ img {
 .how-it-works-button:focus {
   outline: 2px dashed #c99b67;
   outline-offset: 3px;
+}
+
+.how-it-works-sticker {
+  position: absolute;
+  top: 41px;
+  right: 68px;
 }
 
 
